# dynabuffers

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
dynabuffers-python/: .gitignore  README.md  build.gradle  poetry_scripts.py  pyproject.toml  pytest.ini
dynabuffers-python/dynabuffers/: Dynabuffers.py  DynabuffersEngine.py  DynabuffersVisitor.py  Header.py  NamespaceResolver.py  Registry.py  RootElement.py  TypeValidator.py  __init__.py
dynabuffers-python/dynabuffers/__test__/: DynabuffersTest.py
dynabuffers-python/dynabuffers/antlr/: Dynabuffers.interp  Dynabuffers.tokens  DynabuffersLexer.interp  DynabuffersLexer.py  DynabuffersLexer.tokens  DynabuffersListener.py  DynabuffersParser.py  DynabuffersVisitor.py
dynabuffers-python/dynabuffers/api/: IAnnotation.py  ISerializable.py  Subbyte.py
dynabuffers-python/dynabuffers/ast/: AbstractAST.py  ClassType.py  EnumType.py  FieldType.py  NamespaceType.py  UnionType.py
dynabuffers-python/dynabuffers/header/: DynabuffersVersion.py  Header.py  RootElement.py
dynabuffers-python/resources/templates/: DynabuffersVersion.vm
dynabuffers-python/tests/: DynabuffersLimitsTest.py  DynabuffersTest.py  NamespaceResolverTest.py  SubbyteTest.py  TypeValidatorTest.py
dynabuffers-python/tests/compatibility/: CompatibilityTest.py
dynabuffers-python/tests/usecase/: Schema01Test.py  Schema02Test.py  Schema03Test.py  Schema04Test.py  Schema05Test.py  Schema07Test.py  Schema08Test.py  Schema09Test.py  Schema10Test.py  Schema11Test.py  Schema12Test.py  Schema13Test.py  Schema14Test.py  Schema15Test.py  Schema16Test.py  Schema17Test.py  Schema19Test.py  Schema20Test.py  Schema21Test.py  Schema22Test.py  (+19 more)
(+159 files in other folders)
